<resources>
    <string name="app_name">kits</string>
    <string name="action_settings">Settings</string>
    <string name="action_overscroll">Over</string>
    <string name="title_material_progress">MaterialProgress</string>


    <string name="path_heart">M 60.5,27.5 c -9.955,0.0,-10.83,3.268,-12.5,9.0 c -0.67,-3.732,-6.547,-9.0,-12.5,-9.0 C 24.957,27.5,21.0,31.432,21.0,41.0 c 0.0,9.53,9.793,18.257,27.0,33.15 c 15.207,-15.242,27.0,-24.97,27.0,-33.5 C 75.0,20.432,46.043,27.5,60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,33.5 L 60.5,27.5
</string>
    <string name="path_breadtrip">M 50.0,79.5 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 C 50.0,79.5,50.0,79.5,50.0,79.5 c 0.0,0.0,0.0,0.0,0.0,0.0 c 0.0,0.0,0.0,0.0,0.0,0.0 C 50.0,79.5,50.0,79.5,50.0,79.5 L 19.435167,95.8779 L 25.272532,61.18895 L 0.5450612,36.6221 L 34.717583,31.56105 L 50.0,0.0 L 65.28242,31.56105 L 99.45494,36.6221 L 74.72747,61.18895 L 80.564835,95.8779 L 50.0,79.5
</string>

    <string name="action_fitcenter">FIT_CENTER</string>
    <string name="action_fitxy">FIT_XY</string>
    <string name="action_fitstart">FIT_START</string>
    <string name="action_fitend">FIT_END</string>
    <string name="action_center">CENTER</string>
    <string name="action_centercrop">CENTER_CROP</string>
    <string name="action_centerInside">CENTER_INSIDE</string>

</resources>
